<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClickListener"
            type="com.example.airqualityindex.features.register.controller.Register" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.register.controller.Register">

        <EditText
            android:id="@+id/edit_account"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autofillHints="phone"
            android:hint="@string/type_account"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="12:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintWidth_percent="0.7" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeTextType="uniform"
            android:autofillHints="password"
            android:hint="@string/type_password"
            android:inputType="textPassword"
            app:layout_constraintDimensionRatio="12:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_account"
            app:layout_constraintWidth_percent="0.7"
            tools:targetApi="o" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/register"
            android:onClick="@{(view) -> onClickListener.onButtonClick(view)}"
            android:text="@string/register"
            app:layout_constraintDimensionRatio="12:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_password"
            app:layout_constraintWidth_percent="0.7" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>