<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.device.setup.controller.HubSetupStep6">

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.319"
            app:layout_constraintDimensionRatio="1:1.3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.209"
            android:background="@drawable/img_hub_connect_complete" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.547"
            app:layout_constraintDimensionRatio="197:19"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/text_hub_connect_network_complete"
            android:textColor="@color/night_rider"
            android:textStyle="normal"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView12" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.547"
            app:layout_constraintDimensionRatio="197:19"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/please_connect_your_phone_to_the_internet"
            android:textColor="@color/night_rider"
            android:textStyle="normal"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <Button
            android:id="@+id/btn_connect_internet"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/btn_hub_setup"
            android:shadowColor="@color/night_rider"
            android:shadowDy="1"
            android:shadowRadius="0"
            android:textSize="20sp"
            android:text="@string/connect_to_the_internet"
            android:textAllCaps="false"
            android:textColor="@color/ford_gray"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.817"
            app:layout_constraintWidth_percent="0.480"
            app:layout_constraintDimensionRatio="173:45" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>