<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="notWorking.PerHourAQIDialogFragment">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_oval"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.1" />

        <TextView
            android:autoSizeTextType="uniform"
            android:id="@+id/text_aqi_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_back"
            app:layout_constraintWidth_percent="0.4"
            tools:targetApi="o" />

        <TextView
            android:autoSizeTextType="uniform"
            android:id="@+id/text_site_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintDimensionRatio="1:0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_aqi_result"
            app:layout_constraintWidth_percent="0.8"
            tools:targetApi="o" />

        <TextView
            android:autoSizeTextType="uniform"
            android:id="@+id/text_county_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintDimensionRatio="1:0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_site_name"
            app:layout_constraintWidth_percent="0.8"
            tools:targetApi="o" />

        <TextView
            android:autoSizeTextType="uniform"
            android:id="@+id/text_pollutant"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:text="@string/pollutant"
            app:layout_constraintDimensionRatio="1:0.08"
            app:layout_constraintStart_toStartOf="@id/text_county_result"
            app:layout_constraintTop_toBottomOf="@id/text_county_result"
            app:layout_constraintWidth_percent="0.8"
            tools:targetApi="o" />

        <TextView
            android:autoSizeTextType="uniform"
            android:id="@+id/text_pollutant_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintDimensionRatio="1:0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_pollutant"
            app:layout_constraintWidth_percent="0.8"
            tools:targetApi="o" />

        <TextView
            android:autoSizeTextType="uniform"
            android:id="@+id/text_status"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:text="@string/status"
            app:layout_constraintDimensionRatio="1:0.08"
            app:layout_constraintStart_toStartOf="@id/text_pollutant_result"
            app:layout_constraintTop_toBottomOf="@id/text_pollutant_result"
            app:layout_constraintWidth_percent="0.8"
            tools:targetApi="o" />

        <TextView
            android:autoSizeTextType="uniform"
            android:id="@+id/text_status_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintDimensionRatio="1:0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_status"
            app:layout_constraintWidth_percent="0.8"
            tools:targetApi="o" />

        <TextView
            android:autoSizeTextType="uniform"
            android:id="@+id/text_pm25"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:text="@string/pm25_unit"
            app:layout_constraintDimensionRatio="1:0.08"
            app:layout_constraintStart_toStartOf="@id/text_pollutant_result"
            app:layout_constraintTop_toBottomOf="@id/text_status_result"
            app:layout_constraintWidth_percent="0.8"
            tools:targetApi="o" />

        <TextView
            android:autoSizeTextType="uniform"
            android:id="@+id/text_pm25_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            app:layout_constraintDimensionRatio="1:0.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_pm25"
            app:layout_constraintWidth_percent="0.8"
            tools:targetApi="o" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>